# MIREA_database_administration_7-8

./: .gitignore  practice7-8_report.docx
app/: .env.example  .pre-commit-config.yaml  Dockerfile  README.md  alembic.ini  docker-compose.yml  pyproject.toml  requirements.txt
app/migrations/: env.py
app/migrations/versions/: 2801295852f4_initial_migration.py  3a794e77645e_add_time_fields_to_category.py  6861747480bc_add_role_table_add_user_role_table.py  71cd8c7135b8_add_product_table.py  ecf95befe18f_add_unique.py  f245daf5f54f_add_username.py
app/src/: main.py
app/src/api/: __init__.py  _dependencies.py  _utils.py  auth.py  category.py  product.py  role.py  user.py
app/src/core/: db.py  role.py  security.py  settings.py
app/src/models/: __init__.py  _types.py  models.py
app/src/schemas/: auth.py  category.py  product.py  role.py  user.py
app/src/scripts/: create_superuser.py
app/src/services/: __init__.py  category.py  product.py  protocol.py  role.py  user.py  utils.py
infra/: README.md  docker-compose.yml
infra/k8s/: app-claim0-persistentvolumeclaim.yaml  app-deployment.yaml  app-service.yaml  configdb-replica0-claim0-persistentvolumeclaim.yaml  configdb-replica0-deployment.yaml  configdb-replica0-service.yaml  configdb-replica1-claim0-persistentvolumeclaim.yaml  configdb-replica1-deployment.yaml  configdb-replica1-service.yaml  infra-default-networkpolicy.yaml  infra-internalnetwork-networkpolicy.yaml  mongos-router-deployment.yaml  mongos-router-service.yaml  postgres-deployment.yaml  postgres-service.yaml  shard0-replica0-deployment.yaml  (+11 more)
(+30 files in other folders)
